// Vitest Snapshot v1

exports[`compose should > apply all HOC 1`] = `
<DocumentFragment>
  <span>
    bar
  </span>
</DocumentFragment>
`;

exports[`compose should > loose type of props when more than HOC 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`compose should apply all HOC 1`] = `
<DocumentFragment>
  <span>
    bar
  </span>
</DocumentFragment>
`;

exports[`compose should loose type of props when more than HOC 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;
